# chwp

./: .gitignore  .releaserc  CHANGELOG.md  Cargo.toml  Dockerfile  PKGBUILD  README.md  RELEASE.md  chwp.1  release.sh
.circleci/: config.yml
.github/scripts/: upload-asset-to-release.sh
.github/workflows/: pipe.yaml  release.yaml
src/: cli.rs  config.rs  config_test.rs  display.rs  display_manager.rs  display_test.rs  download.rs  download_test.rs  file_receiver.rs  filesystem.rs  filesystem_test.rs  gnome.rs  image.rs  image_edit.rs  image_processor.rs  image_processor_test.rs  kde.rs  main.rs  pexels.rs  pixabay.rs  utils.rs  wallhaven.rs  wallhaven_test.rs  xfce.rs
