[package]
name = "chwp"
version = "0.0.0" # will be replaced by the github action build script
authors = ["Rouven Himmelstein <rouven@himmelstein.info>"]
license = "MIT"
description = "Change your wallpaper from the command line interface."
readme = "README.md"
homepage = "https://github.com/RouHim/chwp"
repository = "https://github.com/RouHim/chwp"
keywords = ["cli", "wallpaper"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
serde_json = "1.0.82"   # String to json
rand = "0.8.5"          # Generate random
image = "0.24.3"        # Image processing (rotate, flip, ...)
dirs = "4.0.0"          # Platform-specific special folder detection, e.g. temp dir
ureq = "2.5.0"          # Http client library
winit = "0.27.0"        # To obtain monitor boundaries

[dev-dependencies]
assertor = "0.0.1"
pretty_assertions = "1.2.1"

# Strip debug symbols in release mode
[profile.release]
strip = "symbols"