[package]
name = "chwp"
version = "0.0.0" # will be replaced by the github action build script
authors = ["Rouven Himmelstein <rouven@himmelstein.info>"]
license = "MIT"
description = "Change your wallpaper from the command line interface."
readme = "README.md"
homepage = "https://github.com/RouHim/chwp"
repository = "https://github.com/RouHim/chwp"
keywords = ["cli", "wallpaper"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
serde_json = "1.0.89"   # String to json
rand = "0.8.5"          # Generate random
image = "0.24.5"        # Image processing (rotate, flip, ...)
dirs = "4.0.0"          # Platform-specific special folder detection, e.g. temp dir
ureq = "2.5.0"          # Http client library
winit = "0.27.5"        # To obtain monitor boundaries

[dev-dependencies]
assertor = "0.0.1"
pretty_assertions = "1.3.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols
